# dart

./: pixi.toml  remove_ccd_export.py  rename_ccd.py  rename_ccd2.py  test_ccd_build.c
dart/collision/hit/: CMakeLists.txt  HitCollisionDetector.cpp  HitCollisionDetector.hpp  HitCollisionGroup.cpp  HitCollisionGroup.hpp  HitCollisionObject.cpp  HitCollisionObject.hpp  HitTypes.cpp  HitTypes.hpp  config.h.in  export.h  hit.hpp
dart/collision/hit/broadphase/: broadphase_SSaP-inl.h  broadphase_SSaP.cpp  broadphase_SSaP.h  broadphase_SaP-inl.h  broadphase_SaP.cpp  broadphase_SaP.h  broadphase_bruteforce-inl.h  broadphase_bruteforce.cpp  broadphase_bruteforce.h  broadphase_collision_manager-inl.h  broadphase_collision_manager.cpp  broadphase_collision_manager.h  broadphase_continuous_collision_manager-inl.h  broadphase_continuous_collision_manager.cpp  broadphase_continuous_collision_manager.h  broadphase_dynamic_AABB_tree-inl.h  broadphase_dynamic_AABB_tree.cpp  broadphase_dynamic_AABB_tree.h  broadphase_dynamic_AABB_tree_array-inl.h  broadphase_dynamic_AABB_tree_array.cpp  broadphase_dynamic_AABB_tree_array.h  broadphase_interval_tree-inl.h  broadphase_interval_tree.cpp  broadphase_interval_tree.h  broadphase_spatialhash-inl.h  broadphase_spatialhash.cpp  broadphase_spatialhash.h  default_broadphase_callbacks.h
dart/collision/hit/broadphase/detail/: hierarchy_tree-inl.h  hierarchy_tree.h  hierarchy_tree_array-inl.h  hierarchy_tree_array.h  interval_tree-inl.h  interval_tree.cpp  interval_tree.h  interval_tree_node-inl.h  interval_tree_node.cpp  interval_tree_node.h  morton-inl.h  morton.cpp  morton.h  node_base-inl.h  node_base.h  node_base_array-inl.h  node_base_array.h  simple_hash_table-inl.h  simple_hash_table.h  simple_interval-inl.h  simple_interval.cpp  simple_interval.h  sparse_hash_table-inl.h  sparse_hash_table.h  spatial_hash-inl.h  spatial_hash.cpp  spatial_hash.h
dart/collision/hit/ccd/: CMakeLists.txt  ccd.c  ccd.h  ccd.hpp  compiler.h  mpr.c  polytope.c  quat.h  shape_support.hpp  simplex.hpp  support.c  support.hpp  vec3.c  vec3.h
dart/collision/hit/ccd/reference/: README.md
dart/collision/hit/common/: exception.cpp  exception.h  profiler.h  time.cpp  time.h  types.h  unused.h  warning.h
dart/collision/hit/common/detail/: profiler.cpp  profiler.h
dart/collision/hit/geometry/: collision_geometry-inl.h  collision_geometry.cpp  collision_geometry.h  geometric_shape_to_BVH_model-inl.h  geometric_shape_to_BVH_model.h
dart/collision/hit/geometry/bvh/: BVH_internal.h  BVH_model-inl.h  BVH_model.h  BVH_utility-inl.h  BVH_utility.cpp  BVH_utility.h  BV_node-inl.h  BV_node.h  BV_node_base.cpp  BV_node_base.h
dart/collision/hit/geometry/octree/: octree-inl.h  octree.cpp  octree.h
dart/collision/hit/geometry/shape/: box-inl.h  box.cpp  box.h  capsule-inl.h  capsule.cpp  capsule.h  cone-inl.h  cone.cpp  cone.h  convex-inl.h  convex.cpp  convex.h  cylinder-inl.h  cylinder.cpp  cylinder.h  ellipsoid-inl.h  ellipsoid.cpp  ellipsoid.h  halfspace-inl.h  halfspace.cpp  halfspace.h  plane-inl.h  plane.cpp  plane.h  representation.cpp  representation.h  shape_base-inl.h  shape_base.cpp  shape_base.h  sphere-inl.h  sphere.cpp  sphere.h  triangle_p-inl.h  triangle_p.cpp  triangle_p.h  utility-inl.h  utility.cpp  utility.h
dart/collision/hit/math/: constants.cpp  constants.h  geometry-inl.h  geometry.cpp  geometry.h  rng-inl.h  rng.cpp  rng.h  triangle.cpp  triangle.h  variance3-inl.h  variance3.cpp  variance3.h
dart/collision/hit/math/bv/: AABB-inl.h  AABB.cpp  AABB.h  OBB-inl.h  OBB.cpp  OBB.h  OBBRSS-inl.h  OBBRSS.cpp  OBBRSS.h  RSS-inl.h  RSS.cpp  RSS.h  kDOP-inl.h  kDOP.cpp  kDOP.h  kIOS-inl.h  kIOS.cpp  kIOS.h  utility-inl.h  utility.cpp  utility.h
dart/collision/hit/narrowphase/: collision-inl.h  collision.cpp  collision.h  collision_object-inl.h  collision_object.cpp  collision_object.h  collision_request-inl.h  collision_request.cpp  collision_request.h  collision_result-inl.h  collision_result.cpp  collision_result.h  contact-inl.h  contact.cpp  contact.h  contact_point-inl.h  contact_point.cpp  contact_point.h  continuous_collision-inl.h  continuous_collision.cpp  continuous_collision.h  continuous_collision_object-inl.h  continuous_collision_object.cpp  continuous_collision_object.h  continuous_collision_request-inl.h  continuous_collision_request.cpp  continuous_collision_request.h  continuous_collision_result-inl.h  continuous_collision_result.cpp  continuous_collision_result.h  cost_source-inl.h  cost_source.cpp  cost_source.h  distance-inl.h  distance.cpp  distance.h  distance_request-inl.h  distance_request.cpp  distance_request.h  distance_result-inl.h  (+3 more)
python/dartpy2/: CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  STATUS.md  dartpy2.cpp  eigen_python.hpp
python/dartpy2/collision/: collision_detector.cpp  collision_filter.cpp  collision_group.cpp  collision_object.cpp  collision_option.cpp  collision_result.cpp  contact.cpp  dart_collision_detector.cpp  distance_option.cpp  distance_result.cpp  fcl_collision_detector.cpp  module.cpp  module.hpp  raycast_option.cpp  raycast_result.cpp
python/dartpy2/common/: logging.cpp  module.cpp  module.hpp  stopwatch.cpp  string.cpp  uri.cpp
python/dartpy2/constraint/: balance_constraint.cpp  module.cpp  module.hpp
python/dartpy2/dynamics/: body_node.cpp  degree_of_freedom.cpp  end_effector.cpp  frame.cpp  free_joint.cpp  inverse_kinematics.cpp  module.cpp  module.hpp  shape.cpp  simple_frame.cpp  skeleton.cpp  support.cpp
python/dartpy2/gui/: module.cpp  module.hpp
python/dartpy2/gui/osg/: interactive_frame.cpp  module.cpp  module.hpp  support_polygon_visual.cpp  viewer.cpp  world_node.cpp
python/dartpy2/io/: dart_loader.cpp  module.cpp  module.hpp
python/dartpy2/math/: eigen_geometry.h  geometry.cpp  module.cpp  module.hpp  random.cpp
python/dartpy2/optimizer/: function.cpp  module.cpp  module.hpp  solver.cpp
python/dartpy2/simulation/: module.cpp  module.hpp  world.cpp
tests/unit/collision/: CMakeLists.txt  test_Ccd.cpp  test_ccd.cpp  test_gjk.cpp  test_mpr.cpp  test_shape_support.cpp
(+281 files in other folders)
